# sentinela

./: README.md  io.github.idevecore.Sentinela.Devel.json  io.github.idevecore.Sentinela.json  meson.build  meson_options.txt
data/: io.github.idevecore.Sentinela.appdata.xml.in.in  io.github.idevecore.Sentinela.desktop.in  io.github.idevecore.Sentinela.desktop.in.in  io.github.idevecore.Sentinela.gschema.xml  io.github.idevecore.Sentinela.gschema.xml.in  io.github.idevecore.Sentinela.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: about.py  actions.py  application.py  define.in  main.py  meson.build  sentinela.gresource.xml  sentinela.in  utils.py  window.blp  window.py  window.ui
src/assets/icons/: meson.build
src/components/: __init__.py
src/components/shortcuts/: shortcuts.py
src/pages/: __init__.py
src/pages/main/: main.blp  main.py
